<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thumbtack</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="validate">Validate</string>
    <string name="cheat">Cheat</string>
    
    <string name="new_game">New Game</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="settings">Settings</string>
    
    <string name="feature_not_implemented">Feature not implemented</string>
    
    <string name="congratulations_you_win">Conguatulations! You win!</string>
    <string name="you_lose">You lose:(</string>    

</resources>
