<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout 
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        
        <View 
            android:visibility="invisible"
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="1"
            android:layout_margin="1dip"/>
        
        <Button 
            android:id="@+id/validate_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/validate"/>
        
        <Button 
            android:id="@+id/cheat_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/cheat"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/bot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button 
            android:id="@+id/new_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/new_game"/>
        <Button 
            android:id="@+id/save_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/save"/>
        <Button 
            android:id="@+id/load_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/load"/>
        <Button 
            android:id="@+id/settings_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dip"
            android:background="@drawable/bg_normal"
            android:text="@string/settings"/>
    </LinearLayout>
    
    <TableLayout 
        android:id="@+id/mine_field"
        android:layout_below="@+id/top_layout"
        android:layout_above="@+id/bot_layout"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"           
        android:layout_margin="5dip"
        android:gravity="center"
        android:stretchColumns="*">
        
        <!-- <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"/>
            
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="01"/>
        </TableRow>
        
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="#ffffff"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11"
                android:textColor="#000000"/>
        </TableRow> -->
        
    </TableLayout>
    
    
</RelativeLayout>




